<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".EmailValidator">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rcafelogo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layoutloginradius"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_marginTop="45dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button"
            android:text="@string/cont"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/privacy"
            app:layout_constraintBottom_toBottomOf="parent"
             />

        <TextView
            android:id="@+id/welcome"
            android:textColor="#323232"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="39.05dp"
            android:text="@string/welcome"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logintocontinue"
            android:textColor="#4C2A14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            android:text="@string/please_log_in_to_continue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"

            />
        <EditText
            android:id="@+id/mobile"
            android:drawableStart="@drawable/triangle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logintocontinue"
            android:layout_margin="34dp"
            android:hint="@string/mobile_number"
            android:background="@drawable/edittextlogin"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/mobile"
            app:layout_constraintBottom_toBottomOf="@id/mobile"
            app:layout_constraintStart_toStartOf="@id/mobile"
            android:layout_marginStart="70dp"
            android:background="#C4C4C4"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="23dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#FF4C2A14"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="23dp"
            />
        <CheckBox
            android:id="@+id/iagreetofollowing"
            android:layout_width="wrap_content"
            android:textColor="#323232"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_to_the_following"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/mobile"
            />
        <EditText
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:textColor="#323232"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iagreetofollowing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:text="@string/privacy_policy_term_and_conditions"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>