<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundimg"
        tools:context=".EmailValidator">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:background="@drawable/rcafelogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layoutloginradius"
            app:layout_constraintBottom_toBottomOf="parent">


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button"
                android:text="@string/cont"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/privacy" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="39.05dp"
                android:fontFamily="@font/circe"
                android:text="@string/welcome"
                android:textColor="@color/welcome"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/logintocontinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:fontFamily="@font/circe"
                android:text="@string/please_log_in_to_continue"
                android:textColor="@color/plzLogIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome"

                />


            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="23dp"
                android:text="@string/skip"
                android:textColor="#FF4C2A14"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="34dp"
                android:background="@drawable/linear_layout"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/logintocontinue">


                <TextView


                    android:id="@+id/triangle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/flag"
                    android:paddingVertical="13dp"
                    android:paddingStart="9dp"
                    android:paddingEnd="10dp"
                    app:drawableStartCompat="@drawable/triangle" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@color/view" />

                <EditText


                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextlogin"
                    android:fontFamily="@font/circe"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingVertical="14dp"
                    android:paddingStart="10dp"
                    android:textSize="13dp"

                    />
            </LinearLayout>


            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/red"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="@id/linearLayout"
                app:layout_constraintStart_toStartOf="@id/linearLayout"
                app:layout_constraintTop_toBottomOf="@id/linearLayout" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:button="@drawable/checked"
                android:paddingEnd="2dp"
                android:paddingBottom="14dp"
                app:layout_constraintBottom_toBottomOf="@id/agreeToContinue"
                app:layout_constraintEnd_toStartOf="@id/agreeToContinue"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout" />

            <TextView
                android:id="@+id/agreeToContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="8dp"
                android:text="@string/i_agree_to_the_following"
                android:textColor="@color/agreeToContinue"
                app:layout_constraintBottom_toBottomOf="@id/checkbox"
                app:layout_constraintBottom_toTopOf="@+id/privacy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkbox" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/agreeToContinue"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/terms"
                android:textColor="@color/agreeToContinue"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/privacy"
                app:layout_constraintTop_toBottomOf="@id/checkbox" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>