<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".EmailValidator">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
      android:background="@drawable/group_306080"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="33.1dp"
        />
    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/back"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/bean"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/bean_blend_code"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:textColor="#4c2914"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        />
    <TextView
        android:textColor="#4c2914"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        app:layout_constraintTop_toBottomOf="@+id/bean"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/design_a_extra"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="205dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/firstpin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:text="@string/enter_4_digit_number"
            android:textColor="#7b7b7b"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pin5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="13dp"
            android:width="48dp"
            android:height="48dp"
            android:background="@drawable/pinedittex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPass" />

        <EditText
            android:id="@+id/pin6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="13dp"
            android:width="48dp"
            android:height="48dp"
            android:background="@drawable/pinedittex"
            app:layout_constraintStart_toEndOf="@id/pin1"
            app:layout_constraintTop_toBottomOf="@+id/confirmPass" />

        <EditText
            android:id="@+id/pin7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="13dp"
            android:width="48dp"
            android:height="48dp"
            android:background="@drawable/pinedittex"
            app:layout_constraintStart_toEndOf="@id/pin2"
            app:layout_constraintTop_toBottomOf="@+id/confirmPass" />

        <EditText
            android:id="@+id/pin8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="13dp"
            android:width="48dp"
            android:height="48dp"
            android:background="@drawable/pinedittex"
            app:layout_constraintStart_toEndOf="@id/pin3"
            app:layout_constraintTop_toBottomOf="@+id/confirmPass" />


        <TextView
            android:id="@+id/confirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/confirm_4_digit_pin"
            android:textColor="#7b7b7b"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin2" />

        <EditText
            android:id="@+id/pin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="12dp"
            android:width="48dp"
            android:height="48dp"
            android:background="@drawable/pinedittex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstpin" />

        <EditText
            android:id="@+id/pin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:width="48dp"
            android:height="48dp"
            android:background="@drawable/pinedittex"
            app:layout_constraintStart_toEndOf="@id/pin1"
            app:layout_constraintTop_toBottomOf="@+id/firstpin" />

        <EditText
            android:id="@+id/pin3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:width="48dp"
            android:height="48dp"
            android:background="@drawable/pinedittex"
            app:layout_constraintStart_toEndOf="@id/pin2"
            app:layout_constraintTop_toBottomOf="@+id/firstpin" />

        <EditText
            android:id="@+id/pin4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:width="48dp"
            android:height="48dp"
            android:background="@drawable/pinedittex"
            app:layout_constraintStart_toEndOf="@id/pin3"
            app:layout_constraintTop_toBottomOf="@+id/firstpin" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button"
            android:text="@string/set_pin"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pin8" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>